# clawdex-mobile

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  render.yaml
.github/workflows/: npm-release.yml
apps/macos/: Package.swift  README.md
apps/macos/Sources/ClawdexDesktop/: BrandIconView.swift  (+9 more)
apps/mobile/: .env.example  App.tsx  app.json  eas.json  google-services.json  package.json
apps/mobile/src/: appSettings.ts  bridgeProfiles.ts  browserPreview.ts  config.ts  githubAppAuth.ts  githubCodespaces.ts  promptLibrary.ts  pushController.ts  pushNotifications.ts  pushSettings.ts
docs/: app-review-notes.md  codex-app-server-cli-gap-tracker.md  macos-desktop-app.md  push-notifications.md  render-tailscale-authkey.md  setup-and-operations.md  tailscale-local-binary.env.example  tailscale-local-binary.md  troubleshooting.md  voice-transcription.md
docs/release-notes/: 5.2.3-store-submission.md  5.2.3.md
scripts/: auto-run-tailscale-binary.sh  build-macos-desktop-app.sh  codespaces-bootstrap.js  notarize-macos-desktop-app.sh  render-start-tailscale-authkey.sh  setup-secure-dev.sh  setup-wizard.sh  sign-macos-desktop-app.sh  start-bridge-secure.js  start-tailscale-local-binary.sh
services/cursor-app-server/src/: appServer.ts  cursorWorkspace.ts  input.ts  projection.ts  sdkDriver.ts  types.ts
services/github-app-auth-worker/: README.md
services/github-app-auth-worker/src/: index.ts
services/rust-bridge/: Cargo.toml  package.json
services/rust-bridge/src/: main.rs
services/rust-bridge/src/services/: git.rs
(+46 files in other folders)
